--- a/src/Vista/VistaRenta.form
+++ b/src/Vista/VistaRenta.form
@@ -74,7 +74,7 @@
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" attributes="0">
-                                          <Component id="txtIdCliente1" min="-2" pref="80" max="-2" attributes="0"/>
+                                          <Component id="txtIdRenta" min="-2" pref="80" max="-2" attributes="0"/>
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                           <Component id="btnBuscar1" min="-2" max="-2" attributes="0"/>
                                       </Group>
@@ -163,7 +163,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="btnBuscar1" alignment="1" min="-2" max="-2" attributes="0"/>
                               <Group type="103" alignment="1" groupAlignment="3" attributes="0">
-                                  <Component id="txtIdCliente1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="txtIdRenta" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -275,7 +275,7 @@
             <Property name="text" type="java.lang.String" value="Id_renta:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtIdCliente1">
+        <Component class="javax.swing.JTextField" name="txtIdRenta">
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
@@ -308,6 +308,9 @@
           </AuxValues>
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="jDateChooserEntrega">
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
           <AuxValues>
